tests/toylang/neg/001692_mutation.toylang
program a = { while sleep do sleep; } .
